Added a note on cvars that automatically download the files to the client.

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -442,7 +442,7 @@ zr_veffects_lightstyle_value "b"
 // Default: "0"
 zr_veffects_sky "0"
 
-// Skybox file, relative to "materials/skybox" folder, to change map skybox to. [Dependency: zr_veffects_sky]
+// Skybox file, relative to "materials/skybox" folder, to change map skybox to.  This file is automatically downloaded to clients. [Dependency: zr_veffects_sky]
 // Default: "sky_borealis01up.vmt"
 zr_veffects_sky_path "sky_borealis01up.vmt"
 
@@ -525,7 +525,7 @@ zr_seffects_death "1"
 // Default: "1"
 zr_ambientsounds "1"
 
-// Sound file, relative to "sound" folder, to play as ambience. [Dependency: zr_ambientsounds]
+// Sound file, relative to "sound" folder, to play as ambience.  This file is automatically downloaded to clients. [Dependency: zr_ambientsounds]
 // Default: "ambient/zr/zr_ambience.mp3"
 zr_ambientsounds_file "ambient/zr/zr_ambience.mp3"
 
