Fixed weapon not rendering correctly in rare cases and added a cvar to allow zombies to pick up weapons at the end of the round.

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -239,6 +239,10 @@ zr_weapons "1"
 // Default: "1"
 zr_weapons_restrict "1"
 
+// Restricts zombies from picking up weapons after the round has ended but before the next round has begun.
+// Default: "1"
+zr_weapons_restrict_endequip "1"
+
 // ZMarket
 
 // Allow player to buy from a list of weapons in the weapons config.
