Imported feature from dev: 688:03dd044dcdd3 - Made scream and moan commands for zombies, with spam protection.

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -523,6 +523,14 @@ zr_seffects_groan "5"
 // Default: "1"
 zr_seffects_death "1"
 
+// Number of sound commands allowed within the time span, or total limit if time span is disabled. ['0' = Disable sound command limit]
+// Default: "4"
+zr_seffects_command_limit "4"
+
+// Time span for sound command limiter (in seconds). ['0' = Disable time span check | positive number = Time span]
+// Default: "10"
+zr_seffects_command_timespan "10"
+
 // Ambient Sounds
 
 // Play an ambient sound to all players during gameplay.
