--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -382,6 +382,10 @@ zr_damage_suicide_human "0"
 // Default: "kill, spectate, jointeam, joinclass"
 zr_damage_suicide_cmds "kill, spectate, jointeam, joinclass"
 
+// Intercept suicide commands only after the first zombie has spawned.
+// Default: "1"
+zr_damage_suicide_after_infect "1"
+
 
 // ----------------------------------------------------------------------------
 // Overlays (core)
