Made cvar for minimum dx level.

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -395,6 +395,10 @@ zr_damage_suicide_after_infect "1"
 // Default: "1.0"
 zr_overlays_update_time "1.0"
 
+// Minimum DirectX level allowed for overlays (mat_dxlevel).
+// Default: "80"
+zr_overlays_min_dxlevel "80"
+
 
 // ----------------------------------------------------------------------------
 // Round End (core)
