Added support for different speed methods, defaulted to prop method now. If you don't want to update class settings, use 'zr_classes_speed_method lmv' for backwards compatibility.

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -208,6 +208,10 @@ zr_classes_human_select "1"
 // Default: "1"
 zr_classes_admin_select "1"
 
+// Speed method to use when applying player speed. Do not touch this if you don't know what you're doing! ["lmv" = Lagged movement value | "prop" = Player speed property]
+// Default: "command"
+zr_classes_speed_method "prop"
+
 // Overlay
 
 // Allow players to toggle class overlay.
