Added sv_maxspeed to zombiereloaded.cfg, and defaulted to 500.  Also fixed a small typo in default value of zr_classes_speed_method.

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -11,6 +11,10 @@
 // Zombie-Related Server Variables
 // ----------------------------------------------------------------------------
 
+// The max speed of any client in the server.  (225 is around the average speed, depending on weapon)
+// Default: "500"
+sv_maxspeed 500
+
 // Amount of time, in minutes, zombies have to infect all humans.
 // Default: "5"
 mp_roundtime 5
@@ -209,7 +213,7 @@ zr_classes_human_select "1"
 zr_classes_admin_select "1"
 
 // Speed method to use when applying player speed. Do not touch this if you don't know what you're doing! ["lmv" = Lagged movement value | "prop" = Player speed property]
-// Default: "command"
+// Default: "prop"
 zr_classes_speed_method "prop"
 
 // Overlay
