Updated docs and spawn protection speed.

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -11,9 +11,9 @@
 // Zombie-Related Server Variables
 // ----------------------------------------------------------------------------
 
-// The max speed of any client in the server.  (225 is around the average speed, depending on weapon)
-// Default: "500"
-sv_maxspeed 500
+// The max speed of any player in the server (250 is normal speed). This is just a speed limit, and not the real players' speed.
+// Default: "800"
+sv_maxspeed 800
 
 // Amount of time, in minutes, zombies have to infect all humans.
 // Default: "5"
@@ -587,9 +587,9 @@ zr_spawnprotect "1"
 // Default: "10"
 zr_spawnprotect_time "10"
 
-// Speed of the player during protection. ['300.0' = Normal | '600.0' = Double speed | Dependency: zr_spawnprotect]
-// Default: "600.0"
-zr_spawnprotect_speed "600.0"
+// Speed of the player during protection. See the manual for more information. [Dependency: zr_spawnprotect]
+// Default: "250.0"
+zr_spawnprotect_speed "250.0"
 
 // Alpha of the player during protection. ['255' = Fully visible | '0' = Completely invisible | Dependency: zr_spawnprotect]
 // Default: "0"
