Added 'explode' suicide command from OB update to intercept list (bug 190).

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -387,8 +387,8 @@ zr_damage_suicide_mzombie "1"
 zr_damage_suicide_human "0"
 
 // List of client commands to intercept as suicide attempts. [Delimiter: ", "]
-// Default: "kill, spectate, jointeam, joinclass"
-zr_damage_suicide_cmds "kill, spectate, jointeam, joinclass"
+// Default: "kill, spectate, jointeam, joinclass, explode"
+zr_damage_suicide_cmds "kill, spectate, jointeam, joinclass, explode"
 
 // Intercept suicide commands only after the first zombie has spawned.
 // Default: "1"
