Changed default speed method to LMV. Updated patch list and changelog.

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -213,8 +213,8 @@ zr_classes_human_select "1"
 zr_classes_admin_select "1"
 
 // Speed method to use when applying player speed. Do not touch this if you don't know what you're doing! ["lmv" = Lagged movement value | "prop" = Player speed property]
-// Default: "prop"
-zr_classes_speed_method "prop"
+// Default: "lmv"
+zr_classes_speed_method "lmv"
 
 // Overlay
 
@@ -588,8 +588,8 @@ zr_spawnprotect "1"
 zr_spawnprotect_time "10"
 
 // Speed of the player during protection. See the manual for more information. [Dependency: zr_spawnprotect]
-// Default: "250.0"
-zr_spawnprotect_speed "250.0"
+// Default: "600.0"
+zr_spawnprotect_speed "600.0"
 
 // Alpha of the player during protection. ['255' = Fully visible | '0' = Completely invisible | Dependency: zr_spawnprotect]
 // Default: "0"
