--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -289,6 +289,10 @@ zr_hitgroups "1"
 // Default: "5"
 zr_infect_mzombie_ratio "5"
 
+// Counts down to the first infection of the round.  The counter is displayed in the middle of the screen.
+// Default: "0"
+zr_infect_mzombie_countdown "0"
+
 // Teleport mother zombies back to spawn on infect.
 // Default: "0"
 zr_infect_mzombie_respawn "0"
