Small timer fixes. Added cvar zr_roundend_balance_teams. See details. Added cvar for disabling team balancing on round end (for use with custom team balancer): zr_roundend_balance_teams. Disabling this will cause players to remain on their current team when a new round starts. If zombies win, everyone will remain on the terrorists team. Fixed invalid handle error after a map change. Fixed language code typo in translations. Infection countdown is no longer displayed if the infection delay is just one second.

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -428,6 +428,9 @@ zr_roundend_overlays_zombie "overlays/zr/zombies_win"
 // Default: "overlays/zr/humans_win"
 zr_roundend_overlays_human "overlays/zr/humans_win"
 
+// Balances the team every time the round ends. Disable this if you use something else to balance teams.
+// Default: "1"
+zr_roundend_balance_teams "1"
 
 // ----------------------------------------------------------------------------
 // Account (module)
