--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -216,6 +216,10 @@ zr_classes_admin_select "1"
 // Default: "lmv"
 zr_classes_speed_method "lmv"
 
+// CS: GO only: Applies an upwards boost if necessary as a workaround for low knock back when standing on the ground. Side effects: Weaker and flying zombies (compensate with lower knock back).
+// Default: "1"
+zr_classes_csgo_knockback_boost "1"
+
 // Overlay
 
 // Allow players to toggle class overlay.
