Implemented infection modes. Compiles, but not tested.

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -289,9 +289,21 @@ zr_hitgroups "1"
 
 // General
 
-// Number of mother zombies to infect (when infect timer is up) in proportion to number of humans on the server.
-// Default: "5"
-zr_infect_mzombie_ratio "5"
+// Mother zombie infection mode. ['dynamic' = every n-th zombie (ratio) | 'absolute' = n zombies (ratio) | 'range' = min/max]
+// Default: "dynamic"
+zr_infect_mzombie_mode "dynamic"
+
+// Dynamic mode: Infection ratio. Every n-th player is infected. | Absolute mode: Number of zombies to infect (positive ratio), or number of humans to keep (negative ratio).
+// Default: "7"
+zr_infect_mzombie_ratio "7"
+
+// Minimum number of mother zombies. Range mode only, cannot be zero.
+// Default: "1"
+zr_infect_mzombie_min "1"
+
+// Maximum number of mother zombies. Range mode only, cannot be zero.
+// Default: "3"
+zr_infect_mzombie_max "3"
 
 // Counts down to the first infection of the round.  The counter is displayed in the middle of the screen.
 // Default: "0"
