Increased max class HP to 100,000. Added a few game mode configs.

--- a/cstrike/cfg/sourcemod/zombiereloaded/swarm.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/swarm.cfg
@@ -4,11 +4,11 @@
 // Execute this config from a pre map config file. Remember to also execute
 // swarm.post.cfg from a post map config file.
 
-// Change to a different set of classes and models here if you want to use
-// different classes. Remember to use immunity mode "infect" and amount "0" on
-// all human classes.
-// zr_config_path_playerclasses "configs/zr/survivorclasses.txt"
-// zr_config_path_models "configs/zr/survivormodels.txt"
+// Optional. Change to a different set of classes and models here if you want to
+// use different classes. Remember to use immunity mode "infect" and amount "0"
+// on all human classes.
+// zr_config_path_playerclasses "configs/zr/playerclasses-swarm.txt"
+// zr_config_path_models "configs/zr/models-swarm.txt"
 
 // Use dynamic infection mode.
 zr_infect_mzombie_mode dynamic
@@ -17,6 +17,9 @@ zr_infect_mzombie_mode dynamic
 // fewer zombies.
 zr_infect_mzombie_ratio 2
 
-// Optionally, it might be good to teleport zombies to spawn on mother zombie
-// infection.
-// zr_infect_mzombie_respawn 1
+// Teleport zombies to spawn on mother zombie infection.
+zr_infect_mzombie_respawn 1
+
+// Disable respawning.
+zr_respawn 0
+zr_zspawn 0
