--- a/cstrike/cfg/sourcemod/zombiereloaded/survivor.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/survivor.cfg
@@ -1,10 +1,10 @@
 // Configures ZR in survivor mode. Everyone but a small group of humans are
 // infected. Execute this config from a pre map config file.
 
-// Change to a different set of classes and models here if you want to use
-// different classes. For instance:
-// zr_config_path_playerclasses "configs/zr/survivorclasses.txt"
-// zr_config_path_models "configs/zr/survivormodels.txt"
+// Optional. Change to a different set of classes and models here if you want to
+// use different classes. For instance:
+// zr_config_path_playerclasses "configs/zr/playerclasses-survivor.txt"
+// zr_config_path_models "configs/zr/models-survivor.txt"
 
 // Use absolute infection mode.
 zr_infect_mzombie_mode absolute
@@ -16,3 +16,10 @@ zr_infect_mzombie_ratio -5
 // Zombies must be teleported to spawn on mother zombie infect, or the humans
 // will be doomed.
 zr_infect_mzombie_respawn 1
+
+// Respawn in zombie team.
+zr_respawn 1
+zr_respawn_team_zombie 1
+
+// Prevent zombies suiciding to get on human team.
+zr_respawn_team_zombie_world 1
