Implemented optional support for the ConfigList plugin. It will execute the "zr_post_exec" list right before post map configs if it exists. Example usage in randommode.cfg and swarm.cfg.

--- a/cstrike/cfg/sourcemod/zombiereloaded/swarm.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/swarm.cfg
@@ -23,3 +23,9 @@ zr_infect_mzombie_respawn 1
 // Disable respawning.
 zr_respawn 0
 zr_zspawn 0
+
+// Use the ConfigList plugin to post execute swarm.post.cfg. ZR will detect this
+// plugin and execute the "zr_post_exec" list if it exists.
+cfglist_delete zr_post_exec
+cfglist_create zr_post_exec
+cfglist_add zr_post_exec sourcemod/zombiereloaded/swarm.post.cfg
