--- a/cstrike/cfg/sourcemod/zombiereloaded/gamemode-examples/cs_italy.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/gamemode-examples/cs_italy.cfg
@@ -1,4 +1,4 @@
 // Place this in cfg/sourcemod/zombiereloaded to use it.
 
-// Use survivor mode in cs_italy.
-exec sourcemod/zombiereloaded/survivor.cfg
+// Enable a random mode in cs_italy.
+exec sourcemod/zombiereloaded/randommode.cfg
