Fixed respawn module ignoring zr_respawn_team_zombie_world cvar. Improved description of zr_respawn_team_zombie_world.

--- a/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
+++ b/cstrike/cfg/sourcemod/zombiereloaded/zombiereloaded.cfg
@@ -635,7 +635,7 @@ zr_respawn_delay "1"
 // Default: "1"
 zr_respawn_team_zombie "1"
 
-// Respawn player as a zombie if player was killed by the world. [Override: zr_respawn_team_zombie]
+// Respawn player as a zombie if player was a zombie and killed by world damage. [Override: zr_respawn_team_zombie]
 // Default: "1"
 zr_respawn_team_zombie_world "1"
 
